--- a/Book/.settings/org.eclipse.core.resources.prefs
+++ b/Book/.settings/org.eclipse.core.resources.prefs
@@ -8,3 +8,4 @@ encoding//src/main/webapp/WEB-INF/views/home.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/views/login/login.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/views/map/page.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/views/notice/list.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/views/roomInfo/page.jsp=UTF-8
